# shorty

./: Cargo.toml  README.md
cheatsheets/: chrome.yml  vim.yml
icons/: icon128x128.icns
src/: config.rs  content.rs  main.rs  settings.rs  side.rs
