[package]
name = "shorty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.24.1"
egui_extras ="0.24.2"
confy = "0.5.1"
yaml-rust = "0.4"
shellexpand = "3.1.0"
linked-hash-map = "0.5.6"
fuzzy-matcher = "0.3.7"
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }